--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                             significantly higher temperatures than their rural surroundings due to human activities and
                             the concentration of buildings, roads, and other infrastructure that absorb and re-emit
                             heat.</li>
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> Urban Heat Islands are areas within cities that experience
                             significantly higher temperatures than their rural surroundings due to human activities and
                             the concentration of buildings, roads, and other infrastructure that absorb and re-emit
@@ -96,8 +95,7 @@
                     <ul>
                         <li><strong>Description: </strong>Cities often suffer from high levels of air pollution due to
                             emissions from vehicles, industrial activities, and other sources.</li>
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> Poor air quality poses severe health risks, including respiratory
                             and cardiovascular diseases, and contributes to environmental problems such as acid rain and
                             global warming.
@@ -109,8 +107,7 @@
                         <li><strong>Description: </strong>Urban areas face challenges in managing water resources
                             effectively, including stormwater runoff, inefficient water use, and pollution of water
                             bodies.</li>
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> Poor water management leads to flooding, water scarcity, degradation
                             of water quality, and loss of aquatic ecosystems.
                         </li>
@@ -120,15 +117,10 @@
                     <ul>
                         <li><strong>Description: </strong> Urbanization often results in the destruction of natural
                             habitats, leading to a decline in local flora and fauna.</li>
-                        <li><strong>Description: </strong> Urbanization often results in the destruction of natural
-                            habitats, leading to a decline in local flora and fauna.</li>
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> The loss of biodiversity disrupts ecosystems, reduces resilience to
                             environmental changes, and diminishes the quality of life for city inhabitants.
-                        <li><strong>Impact</strong> The loss of biodiversity disrupts ecosystems, reduces resilience to
-                            environmental changes, and diminishes the quality of life for city inhabitants.
-                        </li>
+
                     </ul>
                 </li>
                 <li> <strong>High Energy Consumption</strong>
@@ -136,8 +128,7 @@
                         <li><strong>Description: </strong> Cities are major consumers of energy, primarily due to the
                             demand for heating, cooling, lighting, and transportation.</li>
 
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> High energy consumption contributes to the depletion of natural
                             resources, increases greenhouse gas emissions, and raises energy costs for residents and
                             businesses.
@@ -148,8 +139,7 @@
                     <ul>
                         <li><strong>Description: </strong> Many urban residents are not fully aware of the environmental
                             challenges their cities face or the actions they can take to mitigate these issues.</li>
-                    </ul>
-                    <ul>
+
                         <li><strong>Impact</strong> A lack of awareness leads to insufficient community involvement in
                             sustainability initiatives, making it harder to implement effective environmental solutions.
                     </ul>
@@ -294,13 +284,71 @@
     <section id="implementation" class="py-5">
         <div class="container">
             <h2 class="text-center">Implementation Strategy</h2>
-            <ul>
-                <li>Research and Ideation</li>
-                <li>Initial Planning and Design</li>
-                <li>Community Engagement and Networking</li>
-                <li>Prototyping and Testing</li>
-                <li>Documentation and Presentation</li>
-            </ul>
+            <ol>
+                <li> <strong>Reducing Urban Heat Islands (UHIs)</strong>
+                    <ul>
+                        <li><strong>Problem Identification: </strong> Conduct comprehensive research to identify
+                            specific environmental challenges in the target urban area.</li>
+
+                        <li><strong>Ideation:</strong> Brainstorm and develop tailored solutions that address the
+                            identified problems using the latest in green technology and renewable energy.</li>
+
+                        <li><strong>Feasibility Study:</strong> Evaluate the feasibility of the proposed solutions in
+                            terms of technical, economic, and social aspects.</li>
+                    </ul>
+                </li>
+                <li> <strong>Initial Planning and Design</strong>
+                    <ul>
+                        <li><strong>Detailed Planning: </strong> Create a detailed plan that outlines the scope,
+                            objectives, timeline, and resources required for the project.</li>
+
+                        <li><strong>Design Prototypes:</strong>Develop initial designs for the smart green roofs and
+                            walls, solar-powered air purifiers, rainwater harvesting systems, and other components of
+                            EcoSphere.</li>
+                        <li><strong>Stakeholder Involvement:</strong>Engage with local communities, government bodies,
+                            environmental organizations, and other stakeholders to build support and gather insights.
+                        </li>
+                    </ul>
+                </li>
+                <li> <strong>Workshops and Seminars:</strong>
+                    <ul>
+                        <li><strong>Stakeholder Involvement: </strong> Engage with local communities, government bodies,
+                            environmental organizations, and other stakeholders to build support and gather insights.
+                        </li>
+
+                        <li><strong>Workshops and Seminars: </strong>Organize workshops and seminars to educate the
+                            community about the project, its benefits, and how they can contribute.</li>
+                        <li><strong>Feedback Mechanism: </strong>Establish channels for receiving feedback from the
+                            community and stakeholders to refine the project.</li>
+                    </ul>
+                </li>
+                <li> <strong> Prototyping and Testing</strong>
+                    <ul>
+                        <li><strong>Prototype Development:</strong> Create prototypes of the proposed solutions and test
+                            them in a controlled environment.</li>
+
+                        <li><strong>Pilot Projects: </strong>Implement small-scale pilot projects in selected urban
+                            areas to evaluate the effectiveness of the solutions.</li>
+
+                        <li><strong>Data Collection:</strong>Collect data on the performance of the prototypes and pilot
+                            projects to identify any issues and areas for improvement.</li>
+                    </ul>
+                </li>
+                <li> <strong> Documentation and Presentation</strong>
+                    <ul>
+                        <li><strong>Detailed Documentation:</strong> Document the entire process, including research
+                            findings, design iterations, community engagement activities, and pilot project results.
+                        </li>
+
+                        <li><strong>Presentation Materials:</strong>Prepare comprehensive presentation materials,
+                            including reports, slide decks, and visual aids, to present the project to potential
+                            investors, partners, and other stakeholders.</li>
+                        <li><strong>Feedback Incorporation:</strong> Incorporate feedback from presentations and
+                            discussions to further refine the project.</li>
+                    </ul>
+                </li>
+
+            </ol>
         </div>
     </section>
 
